<resources>
    <string name="app_name">AndroidGames</string>
    <string name="game_name">Game Name</string>
    <string name="game_description">Description</string>
    <string name="game_type">Type of game</string>
    <string name="release_date">Release date</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="register">Register</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>